--- a/website/public/stylesheets/contact-form.css
+++ b/website/public/stylesheets/contact-form.css
@@ -68,7 +68,7 @@
         position: inherit;
         box-shadow: unset;
         margin: 1em;
-        width: 65%;
+        width: 80%;
     }
     #open-close-button {
         display: none;
