--- a/website/public/stylesheets/style.css
+++ b/website/public/stylesheets/style.css
@@ -29,6 +29,7 @@ main {
     flex-direction: column;
     justify-content:center;
     align-items: center;
+    width: 100%;
 }
 
 main > div {
@@ -97,13 +98,17 @@ nav {
         left: 0;
         width: 100%;
         background-color: white;
-        border: 2px solid black;
-        box-shadow: 0 -3px 10px black;
+        border-bottom: 1px solid black;
+        box-shadow: 0 -3px 8px black;
         transition: 0.4s top ease-in;
     }
 
     #responsive-links.hidden {
         top: -5rem;
+    }
+
+    main > div {
+        width: 80%;
     }
 }
 
